# tencentcloud-sdk-cpp-intl-en

./: CHANGELOG.md  CMakeLists.txt  README.md  VERSION
ams/: CMakeLists.txt
ams/src/v20201229/: AmsClient.cpp
ams/src/v20201229/model/: AudioResult.cpp  AudioResultDetailTextResult.cpp  AudioSegments.cpp  CreateAudioModerationTaskRequest.cpp  DescribeTaskDetailResponse.cpp  TaskData.cpp
batch/: CMakeLists.txt
batch/src/v20170312/: BatchClient.cpp
batch/src/v20170312/model/: Application.cpp  DataDisk.cpp  Docker.cpp  InstanceTypeQuotaItem.cpp  SystemDisk.cpp
car/: CMakeLists.txt
car/src/v20220110/: CarClient.cpp
car/src/v20220110/model/: ApplicationBaseInfo.cpp  ApplicationConcurrentPackage.cpp  ApplicationProject.cpp  BackgroundImage.cpp  BindConcurrentPackagesToProjectRequest.cpp  BindConcurrentPackagesToProjectResponse.cpp  CreateApplicationProjectRequest.cpp  CreateApplicationProjectResponse.cpp  CreateApplicationRequest.cpp  CreateApplicationResponse.cpp  CreateApplicationSnapshotRequest.cpp  CreateApplicationSnapshotResponse.cpp  CreateApplicationVersionRequest.cpp  CreateApplicationVersionResponse.cpp  DeleteApplicationProjectsRequest.cpp  DeleteApplicationProjectsResponse.cpp  DeleteApplicationRequest.cpp  DeleteApplicationResponse.cpp  DeleteApplicationVersionRequest.cpp  DeleteApplicationVersionResponse.cpp  DescribeApplicationFileInfoRequest.cpp  DescribeApplicationFileInfoResponse.cpp  DescribeApplicationListRequest.cpp  DescribeApplicationListResponse.cpp  DescribeApplicationPathListRequest.cpp  DescribeApplicationPathListResponse.cpp  DescribeApplicationProjectAdvancedConfigRequest.cpp  DescribeApplicationProjectAdvancedConfigResponse.cpp  DescribeApplicationProjectsRequest.cpp  DescribeApplicationProjectsResponse.cpp  DescribeApplicationStatusRequest.cpp  DescribeApplicationStatusResponse.cpp  DescribeApplicationVersionRequest.cpp  DescribeApplicationVersionResponse.cpp  DescribeConcurrentCountRequest.cpp  DescribeConcurrentCountResponse.cpp  DescribeConcurrentPackagesRequest.cpp  DescribeConcurrentPackagesResponse.cpp  DescribeConcurrentSummaryRequest.cpp  DescribeConcurrentSummaryResponse.cpp  (+26 more)
cdn/: CMakeLists.txt
cdn/src/v20180606/: CdnClient.cpp
cdn/src/v20180606/model/: AvifAdapter.cpp  CacheConfigCache.cpp  CacheConfigFollowOrigin.cpp  DetailDomain.cpp  IpFilterPathRule.cpp  IpStatus.cpp  ListClsLogTopicsResponse.cpp  ListTopDataRequest.cpp  UpdateDomainConfigRequest.cpp
cloudaudit/: CMakeLists.txt
cloudaudit/src/v20190319/: CloudauditClient.cpp
cloudaudit/src/v20190319/model/: CreateAuditRequest.cpp  CreateAuditResponse.cpp  CreateAuditTrackRequest.cpp  DeleteAuditRequest.cpp  DeleteAuditResponse.cpp  DescribeAuditTrackResponse.cpp  LookUpEventsResponse.cpp  Storage.cpp
dlc/: CMakeLists.txt
dlc/src/v20210125/: DlcClient.cpp
dlc/src/v20210125/model/: AlterDMSDatabaseRequest.cpp  CheckGrantedPermissionRequest.cpp  CheckGrantedPermissionResponse.cpp  CheckPermission.cpp  Column.cpp  CopyDLCTableRequest.cpp  CopyDLCTableResponse.cpp  CreateDLCTableRequest.cpp  CreateDLCTableResponse.cpp  CreateDMSDatabaseRequest.cpp  CreateSparkAppRequest.cpp  CreateSparkAppTaskRequest.cpp  CreateSparkSessionBatchSQLRequest.cpp  CreateTaskRequest.cpp  CreateTasksRequest.cpp  DLCTable.cpp  DMSDatabaseInfo.cpp  DMSPartition.cpp  DMSSourceDatabaseInfo.cpp  DataEngineInfo.cpp  DescribeAdvancedStoreLocationResponse.cpp  DescribeDLCTableListRequest.cpp  DescribeDLCTableListResponse.cpp  DescribeDLCTableRequest.cpp  DescribeDLCTableResponse.cpp  DescribeDMSDatabaseListRequest.cpp  DescribeDMSDatabaseListResponse.cpp  DescribeDMSDatabaseRequest.cpp  DescribeJobRequest.cpp  DescribeJobResponse.cpp  DescribeJobsRequest.cpp  DescribeJobsResponse.cpp  DescribeQueryRequest.cpp  DescribeQueryResponse.cpp  DescribeTaskResultRequest.cpp  DescribeTaskStatisticsRequest.cpp  DescribeTaskStatisticsResponse.cpp  DescribeUserRolesRequest.cpp  DropDLCTableRequest.cpp  DropDLCTableResponse.cpp  (+20 more)
dms/: CMakeLists.txt
dms/src/v20200819/: DmsClient.cpp
dms/src/v20200819/model/: SendEmailRequest.cpp  SendEmailResponse.cpp  SendTemplatedEmailRequest.cpp  SendTemplatedEmailResponse.cpp
dnspod/: CMakeLists.txt
dnspod/src/v20210323/: DnspodClient.cpp
dnspod/src/v20210323/model/: AddRecordBatch.cpp  BatchRecordInfo.cpp  CreateDomainRequest.cpp  CreatePackageOrderRequest.cpp  CreatePackageOrderResponse.cpp  CreateRecordRequest.cpp  DeletePackageOrderRequest.cpp  DeletePackageOrderResponse.cpp  DescribeDomainListRequest.cpp  DomainAliasInfo.cpp  DomainInfo.cpp  DomainListItem.cpp  ModifyRecordRequest.cpp
domain/: CMakeLists.txt
domain/src/v20180808/: DomainClient.cpp
domain/src/v20180808/model/: AdminContact.cpp  (+60 more)
edgezone/: CMakeLists.txt
edgezone/src/v20260401/: EdgezoneClient.cpp
es/: CMakeLists.txt
es/src/v20180416/: EsClient.cpp
es/src/v20250101/: EsClient.cpp
faceid/: CMakeLists.txt
faceid/src/v20180301/: FaceidClient.cpp
intlpartnersmgt/: CMakeLists.txt
intlpartnersmgt/src/v20220928/: IntlpartnersmgtClient.cpp
iotcloud/: CMakeLists.txt
iotcloud/src/v20210408/: IotcloudClient.cpp
ip/: CMakeLists.txt
ip/src/v20210409/: IpClient.cpp
mariadb/: CMakeLists.txt
mariadb/src/v20170312/: MariadbClient.cpp
mdc/: CMakeLists.txt
mdc/src/v20200828/: MdcClient.cpp
mdl/: CMakeLists.txt
mdl/src/v20200326/: MdlClient.cpp
mdp/: CMakeLists.txt
mdp/src/v20200527/: MdpClient.cpp
message/: CMakeLists.txt
message/src/v20181225/: MessageClient.cpp
mqtt/: CMakeLists.txt
mqtt/src/v20240516/: MqttClient.cpp
ocr/: CMakeLists.txt
ocr/src/v20181119/: OcrClient.cpp
quota/: CMakeLists.txt
quota/src/v20241204/: QuotaClient.cpp
rce/: CMakeLists.txt
rce/src/v20201103/: RceClient.cpp
rce/src/v20260130/: RceClient.cpp
redis/: CMakeLists.txt
redis/src/v20180412/: RedisClient.cpp
sqlserver/: CMakeLists.txt
sqlserver/src/v20180328/: SqlserverClient.cpp
ssl/: CMakeLists.txt
ssl/src/v20191205/: SslClient.cpp
tcmpp/: CMakeLists.txt
tcmpp/src/v20240801/: TcmppClient.cpp
tcr/: CMakeLists.txt
tcr/src/v20190924/: TcrClient.cpp
(+30068 files in other folders)
