#
# Copyright (c) 2017-2019 THL A29 Limited, a Tencent company. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

cmake_minimum_required(VERSION 3.1)

cmake_policy(SET CMP0048 NEW)

file(STRINGS "VERSION" version)

project(tencentcloud-sdk-cpp-intl-en VERSION ${version})

message(STATUS "Project version: ${PROJECT_VERSION}")

set(TARGET_OUTPUT_NAME_PREFIX "tencentcloud-sdk-cpp-intl-en-" CACHE STRING "The target's output name prefix")
option(BUILD_SHARED_LIBS  "Enable shared library" ON)
option(BUILD_FUNCTION_TESTS "Enable function test" OFF)

set(LIB_TYPE STATIC)
if(BUILD_SHARED_LIBS)
    set(LIB_TYPE SHARED)
endif()

set_property(GLOBAL
    PROPERTY
    USE_FOLDERS ON)

set(CMAKE_CXX_STANDARD 11)

# include(ExternalProject)
include(GNUInstallDirs)

if(BUILD_FUNCTION_TESTS)
    enable_testing()
    add_subdirectory(test/function_test/cvm)
    add_subdirectory(test/function_test/cbs)
endif()

add_subdirectory(core)

if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";antiddos;")
    add_subdirectory(antiddos)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";apigateway;")
    add_subdirectory(apigateway)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";as;")
    add_subdirectory(as)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";batch;")
    add_subdirectory(batch)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";billing;")
    add_subdirectory(billing)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cam;")
    add_subdirectory(cam)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cbs;")
    add_subdirectory(cbs)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cdb;")
    add_subdirectory(cdb)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cdn;")
    add_subdirectory(cdn)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cfs;")
    add_subdirectory(cfs)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";chdfs;")
    add_subdirectory(chdfs)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";ckafka;")
    add_subdirectory(ckafka)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";clb;")
    add_subdirectory(clb)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cloudaudit;")
    add_subdirectory(cloudaudit)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cls;")
    add_subdirectory(cls)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cmq;")
    add_subdirectory(cmq)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cvm;")
    add_subdirectory(cvm)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";cynosdb;")
    add_subdirectory(cynosdb)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";dayu;")
    add_subdirectory(dayu)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";dbbrain;")
    add_subdirectory(dbbrain)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";dc;")
    add_subdirectory(dc)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";dcdb;")
    add_subdirectory(dcdb)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";dms;")
    add_subdirectory(dms)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";dts;")
    add_subdirectory(dts)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";ecdn;")
    add_subdirectory(ecdn)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";emr;")
    add_subdirectory(emr)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";es;")
    add_subdirectory(es)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";faceid;")
    add_subdirectory(faceid)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";gaap;")
    add_subdirectory(gaap)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";gme;")
    add_subdirectory(gme)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";gpm;")
    add_subdirectory(gpm)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";gse;")
    add_subdirectory(gse)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";iai;")
    add_subdirectory(iai)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";iotcloud;")
    add_subdirectory(iotcloud)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";ip;")
    add_subdirectory(ip)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";kms;")
    add_subdirectory(kms)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";lighthouse;")
    add_subdirectory(lighthouse)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";live;")
    add_subdirectory(live)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";mariadb;")
    add_subdirectory(mariadb)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";mdc;")
    add_subdirectory(mdc)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";mdl;")
    add_subdirectory(mdl)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";mdp;")
    add_subdirectory(mdp)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";mongodb;")
    add_subdirectory(mongodb)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";monitor;")
    add_subdirectory(monitor)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";mps;")
    add_subdirectory(mps)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";msp;")
    add_subdirectory(msp)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";ocr;")
    add_subdirectory(ocr)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";organization;")
    add_subdirectory(organization)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";postgres;")
    add_subdirectory(postgres)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";privatedns;")
    add_subdirectory(privatedns)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";redis;")
    add_subdirectory(redis)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";rum;")
    add_subdirectory(rum)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";scf;")
    add_subdirectory(scf)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";ses;")
    add_subdirectory(ses)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";sms;")
    add_subdirectory(sms)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";sqlserver;")
    add_subdirectory(sqlserver)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";ssl;")
    add_subdirectory(ssl)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";ssm;")
    add_subdirectory(ssm)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";sts;")
    add_subdirectory(sts)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tag;")
    add_subdirectory(tag)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tcaplusdb;")
    add_subdirectory(tcaplusdb)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tcr;")
    add_subdirectory(tcr)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tdmq;")
    add_subdirectory(tdmq)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tem;")
    add_subdirectory(tem)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tiw;")
    add_subdirectory(tiw)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";tke;")
    add_subdirectory(tke)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";trtc;")
    add_subdirectory(trtc)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";vod;")
    add_subdirectory(vod)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";vpc;")
    add_subdirectory(vpc)
endif()
if(BUILD_MODULES_ALL OR ";${BUILD_MODULES};" MATCHES ";yunjing;")
    add_subdirectory(yunjing)
endif()
